[tool.poetry]
name = "rnp"
version = "0.1.0"
description = "python bindings for librnp"
authors = ["Daniel Wyatt <daniel.wyatt@ribose.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
tox = "^3.25.0"
black = "^23.3"
flake8 = "^3.9.2"
pylint = "^2.10.2"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
