[project]
name = "rnp"
version = "0.2.0"
description = "python bindings for librnp"
authors = [
    {name = "Daniel Wyatt", email = "daniel.wyatt@ribose.com"},
]
requires-python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
tox = "^4.50"
black = "^26.3.1"
flake8 = "^7.0"
pylint = "^3.0"

[tool.pylint.messages_control]
# ctypes simple-type constructors take an optional value, but astroid's ctypes
# brain models __init__(self, value) as required, so every bare c_uint32() /
# c_void_p() / c_size_t() call is a false positive here.
disable = ["no-value-for-parameter"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
